--- a/src/app/packages/core/less/z-index-globals.less
+++ b/src/app/packages/core/less/z-index-globals.less
@@ -6,12 +6,12 @@
 @z-index-go-to-component: 2;
 @z-index-map-loader: 2;
 @z-index-overlays-display-mode-component: 2;
-@z-index-tooltip-after: 2;
 @z-index-case-menu: 2;
 @z-index-annotations-control: 2;
 @z-index-image-processing-control: 2;
 @z-index-imageries-active-border: 4;
 @z-index-context-menu-sub-buttons-list: 5;
+@z-index-tooltip-after: 10;
 @z-index-menu-container: 3000;
 @z-index-context-menu: 4000;
 @z-index-menu: 4000;
